[gd_scene load_steps=5 format=2]

[ext_resource path="res://mocraAdventure/character_cards/script.gd" type="Script" id=1]
[ext_resource path="res://cards/collection_backgrounds/Unbelievable.png" type="Texture2D" id=2]
[ext_resource path="res://cards/avatar/Woogies.png" type="Texture2D" id=3]
[ext_resource path="res://Theme/Theme.tres" type="Theme" id=4]

[node name="Node2D" type="Control"]
custom_minimum_size = Vector2( 250, 300 )
script = ExtResource( 1 )

[node name="background" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource( 2 )

[node name="Avatar" type="Sprite2D" parent="."]
position = Vector2( 120, 60 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="HPLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 125.0
offset_right = 110.0
offset_bottom = 139.0
theme = ExtResource( 4 )
text = "Health Points:"

[node name="HPVar" type="Label" parent="HPLabel"]
offset_left = 144.401
offset_right = 184.401
offset_bottom = 26.0
text = "100"

[node name="ExtraLifeLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 145.0
offset_right = 79.0
offset_bottom = 159.0
theme = ExtResource( 4 )
text = "Extra life:"

[node name="ExtraLifeVar" type="Label" parent="ExtraLifeLabel"]
offset_left = 97.4704
offset_right = 137.47
offset_bottom = 26.0
text = "100"

[node name="SpeedLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 165.0
offset_right = 59.0
offset_bottom = 179.0
theme = ExtResource( 4 )
text = "Speed :"

[node name="SpeedVar" type="Label" parent="SpeedLabel"]
offset_left = 74.9078
offset_right = 114.908
offset_bottom = 26.0
text = "100"

[node name="DamageLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 185.0
offset_right = 67.0
offset_bottom = 199.0
theme = ExtResource( 4 )
text = "Damage :"

[node name="DamageVar" type="Label" parent="DamageLabel"]
offset_left = 92.9578
offset_right = 132.958
offset_bottom = 26.0
text = "100"

[node name="TypeLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 209.0
offset_right = 73.0
offset_bottom = 235.0
theme = ExtResource( 4 )
text = "Type:"

[node name="TypeVar" type="Label" parent="TypeLabel"]
offset_left = 54.1501
offset_right = 94.1501
offset_bottom = 26.0
text = "100"

[node name="OwnedLabel" type="Label" parent="."]
offset_left = 153.791
offset_top = 258.472
offset_right = 235.791
offset_bottom = 284.472
theme = ExtResource( 4 )
text = "OWNED"

[node name="OwnedVar" type="Label" parent="OwnedLabel"]
offset_left = -21.6744
offset_right = -9.67444
offset_bottom = 26.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource( 4 )
text = "1"

